wip photos in obs iary

--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -122,3 +122,49 @@ div br::after {
 	right: 10px;
 }
 
+.note-expanded .photos {
+	padding: 5px;
+	margin: 5px 5px 10px 5px;
+	border-radius: 5px;
+	box-shadow: 0 2px 3px black;
+	background-color: #eee;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
