--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -128,6 +128,15 @@ div br::after {
 	border-radius: 5px;
 	box-shadow: 0 2px 3px black;
 	background-color: #eee;
+	overflow: scroll;
+}
+
+.note-expanded .photos img.photo {
+	padding: 5px;
+	margin: 5px 5px 10px 5px;
+	border-radius: 5px;
+	box-shadow: 0 2px 3px black;
+	height: 25vh;
 }
 
 
