Add a link for nbt to informtion navigation

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -1,5 +1,5 @@
 <template name="MLA">
-	<div class="navigation">
+	<div class="navigation information">
 		<div class="row">
 			<div class="btn">
 				<a href="http://arboretum.umn.edu/gardensandcollections.aspx">
@@ -21,5 +21,10 @@
 				</a>
 			</div>
 		</div>
+
 	</div>
+	<center>
+		<p>This application has been created for the Nature Based Therapeutics department at the University of Minnesota. You can learn more about Nature Based Therapeutics <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
+		</p>
+	</center>
 </template>
