wip fix font for mobile versioning

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -23,8 +23,11 @@
 		</div>
 
 	</div>
-	<center>
-		<p>This application has been created for the Nature Based Therapeutics department at the University of Minnesota. You can learn more about Nature Based Therapeutics <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
-		</p>
-	</center>
+
+	<p class="information text">This application has been created for the Nature Based Therapeutics department at the University of Minnesota. You can learn more about Nature Based Therapeutics <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
+	</p>
+	<div class="credit box">
+		<p class="information credit">Application built by Soren Peterson</p>
+		<p class="information credit">Artistic content illustrated by Lisa Erickson</p>
+	</div>
 </template>
