all of the trees are saved and display one the page

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -1,2 +1,41 @@
 <template name="Trees">
+	{{#each trees}}
+		<h2>{{name}}</h2>
+		<h3>
+			Form
+		</h3>
+		<p>
+			{{form}}
+		</p>
+		<h3>
+			Bark
+		</h3>
+		<p>
+			{{bark}}
+		</p>
+		<h3>
+			Leaf
+		</h3>
+		<p>
+			{{leaf}}
+		</p>
+		<h3>
+			Fruit
+		</h3>
+		<p>
+			{{fruit}}
+		</p>
+		<h3>
+			Range
+		</h3>
+		<p>
+			{{range}}
+		</p>
+		<h3>
+			Type
+		</h3>
+		<p>
+			{{type}}
+		</p>
+	{{/each}}
 </template>
