layout the list of trees a little nicer

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -4,9 +4,11 @@
 </template>
 
 <template name="TreeList">
-	{{#each trees}}
-		<a href="/trees/tree/{{this._id}}"><h2>{{name}}</h2></a>
-	{{/each}}
+	<div class="treelist">
+		{{#each trees}}
+			<a href="/trees/tree/{{this._id}}"><h2>{{name}}</h2></a>
+		{{/each}}
+	</div>
 </template>
 
 <template name="SingleTree">
