Buttons for coniferous and deciduous

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -1,6 +1,15 @@
 <template name="Trees">
-	<a href="/trees/type/deciduous">Deciduous</a>
-	<a href="/trees/type/coniferous">Coniferous</a>
+	<div class="navigation">
+		<div class="row">
+			<a href="/trees/type/deciduous">
+				<img class="btn" src="/deciduous.png"/>
+			</a>
+
+			<a href="/trees/type/coniferous">
+				<img class="btn" src="/coniferous.png"/>
+			</a>
+		</div>
+	</div>
 </template>
 
 <template name="TreeList">
