--- a/app/client/views/home/home.css
+++ b/app/client/views/home/home.css
@@ -16,6 +16,7 @@
 }
 
 .navigation .btn-container {
+	display: inline-block;
 }
 
 .navigation .btn {
@@ -38,6 +39,15 @@
 
 .navigation .btn.text {
 	background-color: rgba(255, 255, 255, 0.75);
+}
+
+.navigation .btn-label {
+	position: relative;
+	top: 10px;
+}
+
+.navigation .btn-label a {
+	color: black;
 }
 
 .navigation .btn a {
