Search box and btuton

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -20,6 +20,13 @@
 			</a>
 		</div>
 	</div>
+
+	<div>
+		<form>
+			<input type="text"/>
+			<input type="submit"/>
+		</form>
+	</div>
 </template>
 
 <template name="TreeList">
