--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -1,6 +1,6 @@
 <template name="Trees">
 	<p>
-		This a copy of the MN DNR's tree identification information. To start, pick whether the tree is deciduous or coniferous.
+		This a copy of the MN DNR's tree identification information. To start, pick whether the tree is deciduous or coniferous, or enter search terms in the box below.
 	</p>
 	
 	<div class="navigation trees">
