update mla top message

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -24,7 +24,7 @@
 
 	</div>
 
-	<p class="information text">This application has been created for the Nature Based Therapeutics department at the University of Minnesota. You can learn more about Nature Based Therapeutics <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
+	<p class="information text">You can learn more about the Nature-Based Therapeutic Services at the Minnesota Landscape Arboretum <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
 	</p>
 	<div class="credit box">
 		<p class="information credit">Application built by Soren Peterson</p>
