change observations msg

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -40,9 +40,9 @@
 
 <template name="ObservationsMsg">
 	<div id="observations-msg">
-		<p>Writing about and documenting your experiences is a very powerful way to grow closer to nature. Even three simple observations will help you appreciate what is around you.</p>
-		<p>This observation diary is a place for you to record your moments in nature. You can write about everything you've observed and include the pictures you've taken.</p>
-		<p>The information you enter here is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. You are free to write about anything you would like.</p>
+		<p>Documenting your experiences is a very powerful way to grow closer to nature. Even three simple observations will help you appreciate what is around you.</p>
+		<p>This observation diary is a place to record meaningful moments in nature. You can write about and even include the pictures you've taken all in one place.</p>
+		<p>The information you enter here is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. Feel free to write about anything you would like.</p>
 	<div class="button close">Close</div>
 	<div class="button dontShow">Don't show this message again</div>
 	</div>
