make entire header in trees thml a button back

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -30,9 +30,11 @@
 </template>
 
 <template name="TreeList">
-	<div class="header">
-		<a href="/trees">Back</a>
-	</div>
+	<a href="/trees">
+		<div class="header">
+			Back
+		</div>
+	</a>
 
 	<div class="header-spacer">
 	</div>
@@ -45,9 +47,11 @@
 </template>
 
 <template name="SingleTree">
-	<div class="header">
-		<a href="{{back}}">Back</a>
-	</div>
+<a href="{{back}}">
+		<div class="header">
+			Back
+		</div>
+	</a>
 
 	<div class="header-spacer">
 	</div>
