move credit to home page

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,6 +1,7 @@
 <template name="Home">
 	<div  class="home title">
 		<h1>Nature Heals</h1>
+		<h3>A connection to nature is essential for health and wellbeing.</h3>
 	</div>
 
 	<div class="navigation">
@@ -39,8 +40,9 @@
 		</div>
 	</div>
 
-	<div class="home quote">
-		<h3>A connection to nature is essential for health and wellbeing.</h3>
+	<div class="credit box">
+		<p class="information credit">Application built by Soren Peterson</p>
+		<p class="information credit">Artistic content illustrated by Lisa Rydin Erickson</p>
 	</div>
 </template>
 
