color tree links

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -30,7 +30,7 @@
 </template>
 
 <template name="TreeList">
-	<a href="/trees">
+	<a class="trees-back" href="/trees">
 		<div class="header">
 			Back
 		</div>
@@ -47,7 +47,7 @@
 </template>
 
 <template name="SingleTree">
-<a href="{{back}}">
+	<a class="trees-back" href="{{back}}">
 		<div class="header">
 			Back
 		</div>
