--- a/app/client/main.css
+++ b/app/client/main.css
@@ -19,6 +19,9 @@ html {
 	-o-background-size: cover;
 	background-size: cover;*/
 	z-index: -2;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .mute {
