--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -39,10 +39,12 @@
 	<div class="header-spacer">
 	</div>
 
-	<div class="treelist">
-		{{#each trees}}
-			<a href="/trees/tree/{{this._id}}"><h2>{{name}}</h2></a>
-		{{/each}}
+	<div class="treelist-container">
+		<div class="treelist">
+			{{#each trees}}
+				<a href="/trees/tree/{{this._id}}"><h2>{{name}}</h2></a>
+			{{/each}}
+		</div>
 	</div>
 </template>
 
