make the tree back button look betteer

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -32,7 +32,7 @@
 <template name="TreeList">
 	<a class="trees-back" href="/trees">
 		<div class="header">
-			Back
+			<h1 class="trees-back-text">Back</h1>
 		</div>
 	</a>
 
