--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -19,8 +19,6 @@
 					<div class="content" contentEditable="true">{{content}}</div>
 					{{#each photos}}
 						<img class="photo" src="{{uri}}"/>
-					{{else}}
-						<p>Tap "Picture" to add a picture...</p>
 					{{/each}}
 				</div>
 			{{/with}}
@@ -29,7 +27,7 @@
 		<div class="obs add">
 			<div class="text">+</div>
 		</div>
-		<div class="scroll-container">
+		<div>
 			{{#each notes}}
 				<div class="note-compact" data-id={{_id}}>
 					<h1>{{title this}}</h1>
