wip remove scroll container from tree and observation

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -13,7 +13,7 @@
 			<div class="obs delete">Delete</div>
 			<div class="obs picture">Picture</div>
 		</div>
-		<div class="scroll-container">
+		<div>
 			{{#with openNote}}
 				<div class="note-expanded">
 					<div class="content" contentEditable="true">{{content}}</div>
