--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -39,7 +39,7 @@
 	<div class="header-spacer">
 	</div>
 
-	<div class="scroll-container">
+	<div>
 		<div class="treelist">
 			{{#each trees}}
 				<a href="/trees/tree/{{this._id}}"><h2>{{name}}</h2></a>
