--- a/app/client/views/splash/splash.html
+++ b/app/client/views/splash/splash.html
@@ -1,8 +1,12 @@
 <template name="Splash">
 	<div class="splash-bg"></div>
-	<div class="splash">
-		<h1>Nature Heals</h1>
-		<a href="/home">Enter</a>
+	<div class="splash-outer">
+		<a href="/home">
+			<div class="splash-inner">
+				<h1>Nature Heals</h1>
+				<span>Enter</span>
+			</div>
+		</a>
 	</div>
 </template>
 
