--- a/app/client/views/splash/splash.css
+++ b/app/client/views/splash/splash.css
@@ -1,9 +1,4 @@
-.splash-outer a {
-	text-decoration: none;
-	color: black;
-}
-
-.splash-inner {
+.splash {
 	position: absolute;
 	top: 50vh;
 	width: 100%;
