--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -19,13 +19,13 @@
 				</div>
 			</a>
 		</div>
-	</div>
 
-	<div>
-		<form>
-			<input type="text"/>
-			<input type="submit"/>
-		</form>
+		<div class="row">
+			<form>
+				<input type="text"/>
+				<input type="submit" value="Search"/>
+			</form>
+		</div>
 	</div>
 </template>
 
