Tree back button size is corrected

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -51,7 +51,7 @@
 <template name="SingleTree">
 	<a class="trees-back" href="{{back}}">
 		<div class="header">
-			Back
+			<h1 class="trees-back-text">Back</h1>
 		</div>
 	</a>
 
