Unify message css

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -24,6 +24,7 @@
 
 	</div>
 
-	<p class="information text">You can learn more about the Nature-Based Therapeutic Services at the Minnesota Landscape Arboretum <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.
-	</p>
+	<div id="message">
+		<p>You can learn more about the Nature-Based Therapeutic Services at the Minnesota Landscape Arboretum <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.</p>
+	</div>
 </template>
