--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -1,7 +1,9 @@
 <template name="Trees">
-	<p>
-		This a copy of the Minnesota Department of Natural Resources' tree identification information. To start, pick whether the tree is deciduous or coniferous, or enter search terms in the box below.
-	</p>
+	<div id="message">
+		<p>
+			This a copy of the Minnesota Department of Natural Resources' tree identification information. To start, pick whether the tree is deciduous or coniferous, or enter search terms in the box below.
+		</p>
+	</div>
 	
 	<div class="navigation trees">
 		<div class="row">
