put headers in all necessary spots

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -24,7 +24,12 @@
 
 	</div>
 
+	<div class="header-spacer"></div>
+
 	<div id="message">
 		<p>You can learn more about the Nature-Based Therapeutic Services at the Minnesota Landscape Arboretum <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.</p>
 	</div>
+
+	{{> Header pageTitle='Information'}}
 </template>
+
