change observations diary title to observations

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -17,7 +17,7 @@
 		{{/each}}
 	</div>
 
-	{{> Header pageTitle='Observations Diary'}}
+	{{> Header pageTitle='Observations'}}
 </template>
 
 <template name="EditObservation">
