pedometer can be started and stopped and will load the locations into the log

--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -15,9 +15,7 @@
 		</div>
 	</div>
 
-	{{#each logItem}}
-		<p>{{_id}}</p>
-	{{/each}}
+	{{distance}}
 
 	{{> Header pageTitle='Pedometer'}}
 </template>
