pedometer actually shows the distance you've walked! in Km for now

--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -12,6 +12,9 @@
 						<span class="text">Start</span>
 					</div>
 			{{/if}}
+			<div class="btn text pedometer-reset">
+				<span class="text">Reset</span>
+			</div>
 		</div>
 	</div>
 
