display pedometer information in both steps and miles

--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -18,7 +18,9 @@
 		</div>
 	</div>
 
-	{{distance}}
+	<div id="message">
+		<p>You have gone approximately {{miles}} miles or {{steps}} steps</p>
+	</div>
 
 	{{> Header pageTitle='Pedometer'}}
 </template>
