add message about pedometer

--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -19,8 +19,11 @@
 	</div>
 
 	<div id="message">
+		<p>You can use this pedometer to track how far you have been walking at the arboretum. To start using touch the start button. If you would like to pause it you can touch stop. At any point touch reset to clear the counted steps.</p>
+		<p>This part of the application works by tracking your geolocation. This information is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. For the best results possibe, please keep this app running while you are counting steps. If you must use another app, do so and then return immediately to this app.</p>
 		<p>You have gone approximately {{miles}} miles or {{steps}} steps</p>
 	</div>
 
 	{{> Header pageTitle='Pedometer'}}
 </template>
+
