--- a/app/client/views/pedometer/pedometer.css
+++ b/app/client/views/pedometer/pedometer.css
@@ -1,8 +1,17 @@
+.navigation.pedometer {
+	top: initial;
+	bottom: 0;
+}
+
 .navigation .btn.pedometer-start {
 	background-color: lime;
 }
 
 .navigation .btn.pedometer-stop {
 	background-color: red;
+}
+
+.row:first-child {
+	margin-bottom: 10px;
 }
 
