message on pedometer map and observation pages

--- a/app/client/views/map/map.html
+++ b/app/client/views/map/map.html
@@ -1,4 +1,8 @@
 <template name="Map">
+	{{#Popup id="map"}}
+		<p>This is a map of the Minnesota Landscape Arboretum grounds. We have marked some of the most interesting parts of the map. Feel free to explore it.</p>
+	{{/Popup}}
+	
 	<div id="map"></div>
 	{{> Header pageTitle='Map'}}
 </template>
