--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -1,9 +1,14 @@
 <template name="Pedometer">
+	{{#Popup id="pedometer"}}
+		<p>This pedometer will help you track how much you walk around the grounds at the Arboretum. To use it, hit start. When you do it will start tracking how far you walk. </p>
+		<p>This part of the application works by tracking your geolocation. This information is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. For the best results possibe, please keep this app running while you are counting steps. If you must use another app, do so and then return immediately to this app.</p>
+	{{/Popup}}
+
 	<div class="header-spacer"></div>
 
 	<div class="navigation pedometer">
 		<div class="row">
-			<p>You have gone approximately {{miles}} miles or {{steps}} steps</p>
+			<h1>{{miles}} miles<br/>or<br/>{{steps}} steps</h1>
 		</div>
 		<div class="row">
 			{{#if started}}
@@ -19,10 +24,6 @@
 				<span class="text">Reset</span>
 			</div>
 		</div>
-	</div>
-
-	<div id="message">
-		<p>This part of the application works by tracking your geolocation. This information is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else. For the best results possibe, please keep this app running while you are counting steps. If you must use another app, do so and then return immediately to this app.</p>
 	</div>
 
 	{{> Header pageTitle='Pedometer'}}
