include all icon sizes

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	{{> Header pageTitle='Tree Identification'}}
+	{{> Header pageTitle='Identification'}}
 </template>
 
 <template name="TreeList">
