--- a/app/client/views/splash/splash.css
+++ b/app/client/views/splash/splash.css
@@ -14,7 +14,7 @@
 .splash-bg {
 	width: 100vw;
 	height: 100vh;
-	background: url('/splash.jpg') center center fixed; 
+	background: url('/splash.png') center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
