--- a/app/client/main.css
+++ b/app/client/main.css
@@ -4,7 +4,7 @@
 	font-family: 'Copse';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Copse'), url('/Copse.woff2') format('woff2'), url('/Copse.ttf') format('truetype');
+	src: local('Copse'), url('/Copse.ttf') format('truetype');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
