--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -123,6 +123,10 @@ div br::after {
 	right: 10px;
 }
 
+.note-expanded .photo-container {
+	position: relative;
+}
+
 .note-expanded .photos {
 	padding: 5px;
 	margin: 5px 5px 10px 5px;
@@ -131,49 +135,25 @@ div br::after {
 	background-color: #eee;
 }
 
+.note-expanded .photo-delete-button {
+	text-align: center;
+	background-image: url('/x.png');
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	border: 1px solid black;
+	background-color: white;
+	border-radius: 100%;
+}
+
 .note-expanded img.photo {
 	display: block;
-	margin: auto;
+	margin: 2.5%;
 	border-radius: 5px;
 	box-shadow: 0 2px 3px black;
 	width: 95%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
