--- a/app/client/views/pedometer/pedometer.html
+++ b/app/client/views/pedometer/pedometer.html
@@ -1,6 +1,6 @@
 <template name="Pedometer">
 	{{#Popup id="pedometer"}}
-		<p>This pedometer will help you track how much you walk around the grounds at the Arboretum and works by tracking your geolocation. For the best results possibe, please keep this app running while you are counting steps. If you must use another app, do so and then return immediately to this app. To use it, hit start. When you do it will start tracking how far you walk.</p>
+		<p>This pedometer works by tracking your geolocation (not exact step count). To use it, hit start. When you do it will start tracking how far you walk on the Arboretum grounds.</p>
 		<p>This information is stored only on your phone and will not be used, uploaded, viewed or distributed by anyone else.</p>
 	{{/Popup}}
 
