change links to use in app browser event and remove text and images from info page in preference of butons

--- a/app/client/views/birds/birds.html
+++ b/app/client/views/birds/birds.html
@@ -2,7 +2,9 @@
 	<div id="message">
 		<p>You are about to go to the Audubon's "Guide to North American Birds". You will be leaving this application. At any time you can hit "done" to return to this application.</p>
 		<p>This website will help you identify birds through pictures, sounds and other characteristics of the birds.</p>
-		<div class="button go">Go to external site</div>
+		<a class="in-app-browser" href="https://www.audubon.org/field-guide">
+			<div class="button go">Go to external site</div>
+		</a>
 		<a href="/home">
 			<div class="button back">Go back</div>
 		</a>
