--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -1,33 +1,34 @@
 <template name="Mla">
 	<div class="navigation information">
 		<div class="row">
-			<div class="btn">
-				<a href="http://arboretum.umn.edu/gardensandcollections.aspx">
-					<img src="/gardens.png"/>
-				</a>
-			</div>
+			<a class="in-app-browser" href="http://arboretum.umn.edu/gardensandcollections.aspx">
+				<div class="btn">
+					<span class="text">Gardens and Collections</span>
+				</div>
+			</a>
 		</div>
 
 		<div class="row">
-			<div class="btn">
-				<a href="http://arboretum.umn.edu/eventsprograms.aspx">
-					<img src="/events.png"/>
-				</a>
-			</div>
+			<a class="in-app-browser" href="http://arboretum.umn.edu/eventsprograms.aspx">
+				<div class="btn">
+					<span class="text">Events and Programs</span>
+				</div>
+			</a>
 
-			<div class="btn">
-				<a href="http://arboretum.umn.edu/planyourvisit.aspx">
-					<img src="/plan.png"/>
-				</a>
-			</div>
+			<a class="in-app-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
+				<div class="btn">
+					<span class="text">Plan Your Visit</span>
+				</div>
+			</a>
 		</div>
 
-	</div>
-
-	<div class="header-spacer"></div>
-
-	<div id="message">
-		<p>You can learn more about the Nature-Based Therapeutic Services at the Minnesota Landscape Arboretum <a href="http://arboretum.umn.edu/planyourvisit.aspx">here</a>.</p>
+		<div class="row">
+			<a class="in-app-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
+				<div class="btn">
+					<span class="text">Nature<br/>Based Therapeutic Services</span>
+				</div>
+			</a>
+		</div>
 	</div>
 
 	{{> Header pageTitle='Information'}}
