--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -15,6 +15,7 @@
 			<div class="note-compact" data-id={{_id}}>
 				<h1>{{title this}}</h1>
 				<p>Created {{created this}}</p>
+				<div class="button open-observation">Open</div>
 			</div>
 		{{/each}}
 	</div>
