needs testing: open u of m links in system browser

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -1,7 +1,7 @@
 <template name="Mla">
 	<div class="navigation information">
 		<div class="row">
-			<a class="in-app-browser" href="http://arboretum.umn.edu/gardensandcollections.aspx">
+			<a class="system-browser" href="http://arboretum.umn.edu/gardensandcollections.aspx">
 				<div class="btn">
 					<span class="text">Gardens and Collections</span>
 				</div>
@@ -9,13 +9,13 @@
 		</div>
 
 		<div class="row">
-			<a class="in-app-browser" href="http://arboretum.umn.edu/eventsprograms.aspx">
+			<a class="system-browser" href="http://arboretum.umn.edu/eventsprograms.aspx">
 				<div class="btn">
 					<span class="text">Events and Programs</span>
 				</div>
 			</a>
 
-			<a class="in-app-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
+			<a class="system-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
 				<div class="btn">
 					<span class="text">Plan Your Visit</span>
 				</div>
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="row">
-			<a class="in-app-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
+			<a class="system-browser" href="http://arboretum.umn.edu/planyourvisit.aspx">
 				<div class="btn">
 					<span class="text">Nature<br/>Based Therapeutic Services</span>
 				</div>
