Tree dichotomy skeleton is laid out.

--- a/app/client/views/trees/trees.html
+++ b/app/client/views/trees/trees.html
@@ -92,3 +92,152 @@
 	</a>
 </template>
 
+<template name="Coniferous">
+	Needle
+	NotNeedle
+</template>
+
+<template name="Deciduous">
+	AlternateBranching
+	OppositeBranching
+</template>
+
+<template name="Needle">
+	SingleNeedle
+	GroupedNeedl
+	ClusteredNeedle
+</template>
+
+<template name="NotNeedle">
+	Northern White Cedar
+	Red Cedar
+</template>
+
+<template name="SingleNeedle">
+	FlatNeedle
+	AngledNeedle
+</template>
+
+<template name="GroupedNeedle">
+	White Pine
+	Red Pine / Norway Pine
+	Jack Pine
+</template>
+
+<template name="ClusteredNeedle">
+	Tamarack
+</template>
+
+<template name="FlatNeedle">
+	Balsam Fir
+	Hemlock
+</template>
+
+<template name="AngledNeedle">
+	White Spruce
+	Black Spruce
+</template>
+
+<template name="AlternateBranching">
+	AlternateBranchingSimpleLeaf
+	AlternateBranchingCompoundLeaf
+</template>
+
+<template name="OppositeBranching">
+	OppositeBranchingSimpleLeaf
+	OppositeBranchingCompoundLeaf
+</template>
+
+<template name="AlternateBranchingSimpleLeaf">
+	SimpleLobedLeaf
+	SimpleNonLobedLeaf
+</template>
+
+<template name="AlternateBranchingCompoundLeaf">
+	PlatedPith
+	NotPlatedPith
+</template>
+
+<template name="SimpleLobedLeaf">
+	Chinkapin Oak
+	Burk Oak
+	White Oak
+	Swamp White Oak
+	Black Oak
+	Red Oak
+	Northern Pin Oak
+</template>
+
+<template name="SimpleNonLobedLeaf">
+	Thorns
+	PaperyBark
+	FlattenedStems
+	Other
+</template>
+
+<template name="Thorns">
+	Hawthorn
+</template>
+
+<template name="PaperyBark">
+	Yellow Birch
+	River Birch
+	Paper Birch
+</template>
+
+<template name="FlattenedStems">
+	Large Tooth Aspen
+	Quaking Aspen
+	Balm of Gilead
+</template>
+
+<template name="Other">
+	Bluebeech
+	Ironwood
+	Beech
+	Choke Cherry
+	Pin Cherry
+	Black Cherry
+	Hackberry
+	Basswood
+	Juneberry or Service Berry
+	Rock Elm
+	American Elm
+	Slippery Elm
+	Willow
+</template>
+
+<template name="PlatedPith">
+	Black Walnut
+	Butternut
+</template>
+
+<template name="NotPlatedPith">
+	Bitternut Hickory
+	Shagbark Hickory
+	Black Locust
+	Honey Locust
+	Mountain Ash
+</template>
+
+<template name="OppositeBranchingSimpleLeaf">
+	SmoothOutline
+	ToothedOutline
+</template>
+
+<template name="OppositeBranchingCompoundLeaf">
+	Black Ash
+	Green Ash
+	White Ash Mountain Ash
+	Box Elder
+</template>
+
+<template name="SmoothOutline">
+	Sugar Maple
+</template>
+
+<template name="ToothedOutline">
+	Red Maple
+	Silver Maple
+</template>
+
